---------------------------------------------------------------------------------------------------
Version: 2.0.2
Date: 2026-02-?
  Features:
    - Updated GUI tooltips.
    - Quality support in GUI.
  Bugfixes:
    - 
---------------------------------------------------------------------------------------------------
Version: 2.0.1
Date: 2026-01-24
  Features:
    - Updated icons to be more in line with LTN Combinator modernised.
  Bugfixes:
    - updated the dependency information to more accurately reflect dependent versions (may work with older versions, but that is untested and unsupported).
    - updated description to be more accurate and concise.
    - fixed a migration bug
---------------------------------------------------------------------------------------------------
Version: 2.0.0
Date: 2025-12-7
  Features:
    - Updated for factorio 2.0.
    - Surface support.
    - Support placing reader on space platforms.
    - (Re-)added HR graphics.
    - Addex Exact mode for network ID.
      Normally, LTN networks function as a bitmask to determine if station request/provided are visible.
      Exact mode only searches the exact same network ID.
  Optimizations:
    - Applied on_event filtering to decrease needless event evaluation.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2022-11-18
  Bugfixes:
    - Error on removing modded item using the same prototype name as a still existing fluid, or the other way around.
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-09-25
  Features:
    - use ltn-stop-default-network as default network-id
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-07-03
  Features:
    - updated icons by snouz #8
---------------------------------------------------------------------------------------------------