@@ -1,11 +1,12 @@
 [mod-setting-name]
 ltn_content_reader_update_interval=Update Interval (ticks)
 ltn_content_reader_default_surface=Default surface index
+ltn_content_reader_global_groups=Global named logistics groups
 
 [mod-setting-description]
 ltn_content_reader_update_interval=How often combinator outputs are updated.\nDefault = 120
 ltn_content_reader_default_surface=Default surface index while creating combinators\nAll: (default) Mix signals from all surfaces\nCurrent: use signals from current surface
-
+ltn_content_reader_global_groups=Whether or not the content readers use a global named logistics group for the signals.\nPro: multiple readers with same setting update simultaneously, reducing load. They are also world readable for players, vehicles, and normal combinators.\nCon: pollutes the logistics groups of players, vehicles and normal combinators with all the different groups used by content readers.
 
 [entity-name]
 ltn-content-reader=LTN Content Reader
